# nvidia-control-center

./: .gitignore  BUILDING.md  CLAUDE.md  DEVELOPMENT.md  README.md  \  package.json  pnpm-lock.yaml
apps/desktop/: DEBUGGING.md  OBSERVABILITY.md  PRIVACY.md  SECURITY.md  electron-builder.config.cjs  electron.vite.config.ts  package.json  tailwind.config.js
apps/desktop/nvidia-cc-rs/: Cargo.toml
apps/desktop/nvidia-cc-rs/.cargo/: config.toml
apps/desktop/nvidia-cc-rs/src/: main.rs
apps/desktop/scripts/: build-rs-cross.ts  build-rs.ps1  build-rs.sh  build-win-clean.ps1  clear-vite-cache.ts  ensure-build-dirs.ts  ensure-rust-binary.ts  postinstall.cjs  sign-binary.sh
apps/desktop/src/main/: acp-main-agent.ts  acp-service.ts  acp-session-state.ts  agent-profile-service.ts  ai-sdk-provider.ts  builtin-tool-definitions.ts  builtin-tools.ts  config.ts  context-budget.ts  conversation-service.ts  index.ts  keyboard.ts  llm-fetch.ts  llm.ts  mcp-sampling.ts  mcp-service.ts  menu.ts  models-service.ts  oauth-callback-server.ts  oauth-client.ts  oauth-deeplink-handler.ts  parakeet-stt.ts  profile-service.ts  push-notification-service.ts  remote-server.ts  renderer-handlers.ts  skills-service.ts  structured-output.ts  supertonic-tts.ts  system-prompts.ts  tipc.ts  tts-llm-preprocessing.ts  tts-preprocessing.test.ts  updater.ts  window.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/shared/: index.ts  types.ts
apps/mobile/: App.tsx  app.json  metro.config.js  package.json
scripts/: build-release.sh
tests/: OAUTH_DEEPLINK_TEST_RESULTS.md
(+55 files in other folders)
